rest-api/src/main/java/fr/uga/l3miage/example/error/MiahootNotFoundErrorResponse.java
package fr.uga.l3miage.example.error;

import com.fasterxml.jackson.annotation.JsonProperty;
import com.fasterxml.jackson.annotation.JsonTypeName;
import io.swagger.v3.oas.annotations.media.Schema;
import lombok.Builder;
import lombok.EqualsAndHashCode;
import lombok.Getter;
import lombok.ToString;
import lombok.extern.jackson.Jacksonized;
import org.springframework.http.HttpStatus;

import static com.fasterxml.jackson.annotation.JsonProperty.Access.WRITE_ONLY;

@Getter
@ToString(callSuper = true)
@Builder
@EqualsAndHashCode
public class MiahootNotFoundErrorResponse{


    @Schema(description = "l'id utilisé pour la recherche",example = "description")
    private final Long id;
}
